corpus/function.txt
============================================
function - declaration
============================================

function int foo(string bar, type1 baz);
endfunction

----

(source_file (package_or_generate_item_declaration
  (function_declaration (function_body_declaration
    (function_data_type_or_implicit1 (data_type_or_void (data_type (integer_atom_type))))
    (function_identifier (function_identifier (simple_identifier)))
    (tf_port_list
      (tf_port_item1 (data_type_or_implicit1 (data_type)) (port_identifier (simple_identifier)))
      (tf_port_item1 (data_type_or_implicit1 (data_type (simple_identifier))) (port_identifier (simple_identifier)))
    )
  ))
))


============================================
function - call function in body
============================================

function foo();
  bar(baz, 3);
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (subroutine_call
                  (tf_call
                    (simple_identifier)
                    (list_of_arguments_parent
                      (expression
                        (primary
                          (simple_identifier)))
                      (expression
                        (primary
                          (primary_literal
                            (integral_number
                              (decimal_number
                                (unsigned_number)))))))))))))))))


============================================
function - uvm_config_db
============================================

function foo();
  if (!uvm_config_db#(virtual a_if)::get(this, "", "vif", vif)) begin
  end
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (conditional_statement
                  (cond_predicate
                    (expression
                      (unary_operator)
                      (primary
                        (function_subroutine_call
                          (subroutine_call
                            (class_identifier
                              (simple_identifier))
                            (parameter_value_assignment
                              (list_of_parameter_assignments
                                (ordered_parameter_assignment
                                  (_ordered_parameter_assignment
                                    (data_type
                                      (interface_identifier
                                        (simple_identifier)))))))
                            (tf_call
                              (simple_identifier)
                              (list_of_arguments_parent
                                (expression
                                  (primary))
                                (expression
                                  (primary
                                    (primary_literal
                                      (string_literal))))
                                (expression
                                  (primary
                                    (primary_literal
                                      (string_literal))))
                                (expression
                                  (primary
                                    (simple_identifier))))))))))
                  (statement_or_null
                    (statement
                      (statement_item
                        (seq_block)))))))))))))
